changes to reflect on the front page on how the page layout should look like (added display of title in the boxes). + changed css for formatting + Wrapping <div> around the actual tauko_box <div>. As this breaks the sorting algorithm, I changed the naming in the css file such that the surrounding div now is of class tauko_box (but has no border) and the inner is of class tauko_box_inner (which has all the attributes of the former tauko_box). Unfortunately, this breaks the rendering in all the other gallery views. But I don't know how to repair it. Basically, we want to have all the boxes in the gallery views (_NOT_ the content view) to have the title displayed as it is now on the front page.

--- a/style_screen.css
+++ b/style_screen.css
@@ -33,7 +33,7 @@ li { list-style: none;
 .main-navigation { height: 40px;
 		 }
 
-.tauko_box {
+/*.tauko_box {
     background-color: #fff;
     padding: 40px;
     margin:   9.3px;
@@ -41,7 +41,29 @@ li { list-style: none;
     border: 1.1px dashed #000;
     border-radius: 1.5px;
     display: inline-block;
+}*/
+.tauko_box_inner {
+   background-color: #fff;
+   padding: 40px;
+   margin:   9.3px;
+   line-height: 1.4em;
+   border: 1.1px dashed #000;
+   border-radius: 1.5px;
+   display: inline-block;
 }
+.tauko_box_head {
+   position: relative;
+   font-size:80%;
+   margin-top:-20px;
+   width: 150px;
+   margin-left:20px;
+   padding-left:5px;
+   /*border: 1.1px solid #000;*/
+   color: #fff;
+   background-color:#fff;
+}
+
+
 
 div.nav_menu { display: block;
 	       position: absolute;
